--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,14 +29,11 @@ ENDIF()
 SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -Wall -Wextra -Wno-unused-parameter")
 SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -fno-omit-frame-pointer")
 IF (RELEASE EQUAL 1)
-    SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -O3 -g0 -DLS_HPACK_RELEASE")
+    SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -O3 -g0")
 ELSE()
-    SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -O0 -g3")
+    SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -O0 -g3 -DLS_HPACK_EMIT_TEST_CODE=1")
     # -Werror is used to force us to fix warnings early.
     SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -Werror")
-    ENABLE_TESTING()
-    INCLUDE_DIRECTORIES("test")
-    ADD_SUBDIRECTORY("test")
 ENDIF()
 
 IF (NDEBUG EQUAL 1)
@@ -48,3 +45,9 @@ SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -DXXH_HEADER_NAME=\\\"${XXH_HEADER_NAME}\\
 SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${MY_CMAKE_FLAGS}")
 
 MESSAGE(STATUS "Compiler flags: ${CMAKE_C_FLAGS}")
+
+IF (NOT RELEASE EQUAL 1)
+    ENABLE_TESTING()
+    INCLUDE_DIRECTORIES("test")
+    ADD_SUBDIRECTORY("test")
+ENDIF()
