Add encode-qif utility

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,3 +65,7 @@ IF (NOT RELEASE EQUAL 1)
     INCLUDE_DIRECTORIES("test")
     ADD_SUBDIRECTORY("test")
 ENDIF()
+
+IF (CMAKE_SYSTEM_NAME STREQUAL Linux)
+    ADD_SUBDIRECTORY(bin)
+ENDIF()
