Fix up cmake a bit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@
 #   XXH_INCLUDE_DIR
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
-PROJECT(ls-hpack)
+PROJECT(ls-hpack C)
 
 IF (SHARED EQUAL 1)
     ADD_LIBRARY(ls-hpack SHARED src/lshpack.c)
@@ -30,8 +30,8 @@ IF (MSVC)
     INCLUDE_DIRECTORIES(wincompat)
 ENDIF()
 
-IF (CMAKE_C_COMPILER EQUAL gcc
-	OR CMAKE_C_COMPILER EQUAL clang)
+IF (CMAKE_C_COMPILER_ID STREQUAL GNU
+	OR CMAKE_C_COMPILER_ID STREQUAL Clang)
 	SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -Wall -Wextra -Wno-unused-parameter")
 	SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -fno-omit-frame-pointer")
 	IF (RELEASE EQUAL 1)
@@ -41,6 +41,9 @@ IF (CMAKE_C_COMPILER EQUAL gcc
 	    # -Werror is used to force us to fix warnings early.
 	    SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -Werror")
 	ENDIF()
+        IF (PROFILE EQUAL 1)
+            SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -g -pg")
+        ENDIF()
 ENDIF()
 
 IF (NOT RELEASE EQUAL 1)
@@ -53,7 +56,7 @@ ENDIF()
 
 SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -DXXH_HEADER_NAME=\\\"${XXH_HEADER_NAME}\\\"")
 
-SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${MY_CMAKE_FLAGS}")
+SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${MY_CMAKE_FLAGS} $ENV{EXTRA_CFLAGS}")
 
 MESSAGE(STATUS "Compiler flags: ${CMAKE_C_FLAGS}")
 
