Don't complain about implicit fall-throughs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,11 @@ IF (CMAKE_C_COMPILER_ID STREQUAL GNU
 	OR CMAKE_C_COMPILER_ID STREQUAL Clang)
 	SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -Wall -Wextra -Wno-unused-parameter")
 	SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -fno-omit-frame-pointer")
+        INCLUDE(CheckCCompilerFlag)
+        CHECK_C_COMPILER_FLAG(-Wno-implicit-fallthrough HAS_NO_IMPLICIT_FALLTHROUGH)
+        IF (HAS_NO_IMPLICIT_FALLTHROUGH)
+            SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -Wno-implicit-fallthrough")
+        ENDIF()
 	IF (RELEASE EQUAL 1)
 	    SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -O3 -g0")
 	ELSE()
