--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 # The following variable can be defined on the command line:
 #
 #   SHARED
-#   RELEASE
 #   NDEBUG
 #   XXH_HEADER_NAME
 #   XXH_INCLUDE_DIR
@@ -39,10 +38,7 @@ IF (CMAKE_C_COMPILER_ID STREQUAL GNU
         IF (HAS_NO_IMPLICIT_FALLTHROUGH)
             SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -Wno-implicit-fallthrough")
         ENDIF()
-	IF (RELEASE EQUAL 1)
-	    SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -O3 -g0")
-	ELSE()
-	    SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -O0 -g3")
+	IF (NOT CMAKE_BUILD_TYPE STREQUAL Release)
 	    # -Werror is used to force us to fix warnings early.
 	    SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -Werror")
 	ENDIF()
@@ -51,7 +47,7 @@ IF (CMAKE_C_COMPILER_ID STREQUAL GNU
         ENDIF()
 ENDIF()
 
-IF (NOT RELEASE EQUAL 1)
+IF (NOT CMAKE_BUILD_TYPE STREQUAL Release)
     SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -DLS_HPACK_EMIT_TEST_CODE=1")
 ENDIF()
 
@@ -65,7 +61,7 @@ SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${MY_CMAKE_FLAGS} $ENV{EXTRA_CFLAGS}")
 
 MESSAGE(STATUS "Compiler flags: ${CMAKE_C_FLAGS}")
 
-IF (NOT RELEASE EQUAL 1)
+IF (NOT CMAKE_BUILD_TYPE STREQUAL Release)
     ENABLE_TESTING()
     INCLUDE_DIRECTORIES("test")
     ADD_SUBDIRECTORY("test")
