--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -3,6 +3,8 @@ target_link_libraries(encode-qif PRIVATE ls-hpack)
 
 add_executable(gen-fast-dec-table gen-fast-dec-table.c)
 
+add_executable(gen-fast-enc-table gen-fast-enc-table.c)
+
 add_executable(huff-decode huff-decode.c ../deps/xxhash/xxhash.c)
 target_link_libraries(huff-decode PRIVATE ls-hpack)
 
