Add ability to compile library without large tables
Use -DLS_HPACK_USE_LARGE_TABLES=0 or CMAKE_BUILD_TYPE=MinRelSize

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,10 @@ IF (NOT CMAKE_BUILD_TYPE STREQUAL Release)
     SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -DLS_HPACK_EMIT_TEST_CODE=1")
 ENDIF()
 
+IF (CMAKE_BUILD_TYPE STREQUAL MinSizeRel)
+    SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -DLS_HPACK_USE_LARGE_TABLES=0")
+ENDIF()
+
 IF (NDEBUG EQUAL 1)
     SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -DNDEBUG")
 ENDIF()
