--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@
 #   NDEBUG
 #   XXH_HEADER_NAME
 #   XXH_INCLUDE_DIR
+#   LSHPACK_XXH
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 PROJECT(ls-hpack C)
@@ -23,6 +24,10 @@ IF (DEFINED XXH_INCLUDE_DIR)
     INCLUDE_DIRECTORIES("${XXH_INCLUDE_DIR}")
 ELSE()
     INCLUDE_DIRECTORIES(deps/xxhash)
+ENDIF()
+
+IF (LSHPACK_XXH)
+    TARGET_SOURCES(ls-hpack PRIVATE deps/xxhash/xxhash.c)
 ENDIF()
 
 IF (MSVC)
