add -fsanitize=address for debug gcc& cland debug builds
-fsanitize=address is a great feature to check memory leaks and memory corruption.
if I remove lshpack_enc_cleanup(&henc); call or lshpack_dec_cleanup(&hdec); call from e.g test_hpack_test_RFC_Example function 
make test will fail
then to analyze this issue further I'll run ./test/test_hpack from command line and get following report

=================================================================
==6015==ERROR: LeakSanitizer: detected memory leaks

Direct leak of 512 byte(s) in 1 object(s) allocated from:
    #0 0x7f1541dd6b50 in __interceptor_malloc (/usr/lib/x86_64-linux-gnu/libasan.so.4+0xdeb50)
    #1 0x55c222909fcb in henc_grow_tables /tmp/ls-hpack/src/lshpack.c:71443
    #2 0x55c22290aa0e in lshpack_enc_push_entry /tmp/ls-hpack/src/lshpack.c:71493
    #3 0x55c22290bde0 in lshpack_enc_encode /tmp/ls-hpack/src/lshpack.c:71663
    #4 0x55c2228f19b3 in test_hpack_test_RFC_Example /tmp/ls-hpack/test/test_hpack.c:353
    #5 0x55c2228fd54e in main /tmp/ls-hpack/test/test_hpack.c:1455
    #6 0x7f1541928b96 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x21b96)

Indirect leak of 114 byte(s) in 1 object(s) allocated from:
    #0 0x7f1541dd6b50 in __interceptor_malloc (/usr/lib/x86_64-linux-gnu/libasan.so.4+0xdeb50)
    #1 0x55c22290aa39 in lshpack_enc_push_entry /tmp/ls-hpack/src/lshpack.c:71497
    #2 0x55c22290bde0 in lshpack_enc_encode /tmp/ls-hpack/src/lshpack.c:71663
    #3 0x55c2228f1d86 in test_hpack_test_RFC_Example /tmp/ls-hpack/test/test_hpack.c:385
    #4 0x55c2228fd54e in main /tmp/ls-hpack/test/test_hpack.c:1455
    #5 0x7f1541928b96 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x21b96)

Indirect leak of 81 byte(s) in 1 object(s) allocated from:
    #0 0x7f1541dd6b50 in __interceptor_malloc (/usr/lib/x86_64-linux-gnu/libasan.so.4+0xdeb50)
    #1 0x55c22290aa39 in lshpack_enc_push_entry /tmp/ls-hpack/src/lshpack.c:71497
    #2 0x55c22290bde0 in lshpack_en

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,7 @@ IF (CMAKE_C_COMPILER_ID STREQUAL GNU
         IF (CMAKE_BUILD_TYPE STREQUAL Release)
             SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -g0 -O3")
         ELSE()
-            SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -g3 -O0")
+            SET(MY_CMAKE_FLAGS "${MY_CMAKE_FLAGS} -g3 -O0 -fsanitize=address")
         ENDIF()
 ENDIF()
 
