Move HPACK .c and .h files into top-level dir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,11 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 PROJECT(ls-hpack C)
 
 IF (SHARED EQUAL 1)
-    ADD_LIBRARY(ls-hpack SHARED src/lshpack.c)
+    ADD_LIBRARY(ls-hpack SHARED lshpack.c)
 ELSE()
-    ADD_LIBRARY(ls-hpack STATIC src/lshpack.c)
+    ADD_LIBRARY(ls-hpack STATIC lshpack.c)
 ENDIF()
-INCLUDE_DIRECTORIES(include)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
 
 IF (NOT DEFINED XXH_HEADER_NAME)
     SET(XXH_HEADER_NAME "xxhash.h")
