calc-xxh: calculate XXH32 hashes for name and value strings

--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -10,3 +10,5 @@ target_link_libraries(huff-decode PRIVATE ls-hpack)
 
 add_executable(huff-encode huff-encode.c ../deps/xxhash/xxhash.c)
 target_link_libraries(huff-encode PRIVATE ls-hpack)
+
+add_executable(calc-xxh calc-xxh.c ../deps/xxhash/xxhash.c)
