API: Add decoder flags to calculate name and nameval hashes

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,8 +2,14 @@ ENABLE_TESTING()
 
 ADD_EXECUTABLE(test_hpack test_hpack.c ../deps/xxhash/xxhash.c)
 TARGET_LINK_LIBRARIES(test_hpack ls-hpack)
-ADD_TEST(hpack test_hpack 0)
-ADD_TEST(hpack-http1x test_hpack 1)
+ADD_TEST(hpack-0 test_hpack 0)
+ADD_TEST(hpack-1 test_hpack 1)
+ADD_TEST(hpack-2 test_hpack 2)
+ADD_TEST(hpack-3 test_hpack 3)
+ADD_TEST(hpack-4 test_hpack 4)
+ADD_TEST(hpack-5 test_hpack 5)
+ADD_TEST(hpack-6 test_hpack 6)
+ADD_TEST(hpack-7 test_hpack 7)
 
 ADD_EXECUTABLE(test_int test_int.c ../deps/xxhash/xxhash.c)
 TARGET_LINK_LIBRARIES(test_int ls-hpack)
