Fix build on musl-based distro
This commit addresses an issue encountered when building on musl-based distributions.
These distributions do not include the sys/queue.h header file
in their standard library [1]. To resolve this, we have included the queue header
file from the repository in cases where sys/queue.h is not found.

Ref: [1] https://wiki.musl-libc.org/faq.html#Q:-Why-is-%3Ccode%3Esys/queue.h%3C/code%3E-not-included?"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 PROJECT(ls-hpack C)
 
+include(CheckIncludeFiles)
+
 IF (SHARED EQUAL 1)
     ADD_LIBRARY(ls-hpack SHARED lshpack.c)
 ELSE()
@@ -30,8 +32,14 @@ IF (LSHPACK_XXH)
     TARGET_SOURCES(ls-hpack PRIVATE deps/xxhash/xxhash.c)
 ENDIF()
 
+check_include_files("sys/queue.h" HAVE_SYS_QUEUE_H)
+
+IF (NOT HAVE_SYS_QUEUE_H)
+    INCLUDE_DIRECTORIES(compat/queue)
+ENDIF()
+
 IF (MSVC)
-    INCLUDE_DIRECTORIES(wincompat)
+    INCLUDE_DIRECTORIES(compat/windows)
 ENDIF()
 
 IF (CMAKE_C_COMPILER_ID STREQUAL GNU
